@@ -4,6 +4,9 @@ New in master
 Features
 --------
 
+* Support ignoring assets via ``ignore_assets`` theme meta field
+  (Issue #2812)
+* Ignore unused Colorbox locales (Issue #2812)
 * Support for reStructured text docinfo metadata with
   USE_REST_DOCINFO_METADATA option, defaulting to False (Issue #1923)
 * New HIDE_REST_DOCINFO option, defaulting to False.
